src/test/resources/de/feu/ps/bridges/serialization/semantic_errors/island_overstepping_bridge.bgs
FIELD
11 x 8 | 3

ISLANDS
( 0, 0 | 1 )
( 0, 3 | 2 )
( 0, 5 | 1 )

BRIDGES
( 0, 2 | false )
